<resources>
    <string name="app_name">vread</string>
    <string name="app_version">vread 0.0.1</string>

    <!-- Actions -->
    <string name="action_add">Add Book</string>
    <string name="action_edit">Edit</string>
    <string name="action_edit_profile">Edit Profile</string>
    <string name="action_follow">Follow</string>
    <string name="action_notifications">Notifications</string>
    <string name="action_scan">Scan Book</string>
    <string name="action_search">Search</string>
    <string name="action_send">Send</string>
    <string name="action_settings">Settings</string>
    <string name="action_save">Save</string>
    <string name="action_unfollow">Unfollow</string>

    <!-- Confirmations -->
    <string name="confirmation_follow"><![CDATA[Follow <em><b>@%s</b></em>?]]></string>
    <string name="confirmation_unfollow"><![CDATA[Stop following <em><b>@%s</b></em>?]]></string>

    <!-- Hints -->
    <string name="hint_about">About</string>
    <string name="hint_compose">What\'s happening?</string>
    <string name="hint_email">Email</string>
    <string name="hint_first_name">First Name</string>
    <string name="hint_last_name">Last Name</string>
    <string name="hint_password">Password</string>
    <string name="hint_password_confirm">Confirm Password</string>
    <string name="hint_password_old">Old Password</string>
    <string name="hint_phone">Phone</string>
    <string name="hint_reset_link">Tell us the email associated with your Connect account and we will shortly send you a
    magic link to recover your lost password.
  </string>
    <string name="hint_search">Search users</string>
    <string name="hint_username">Username</string>
    <string name="hint_website">Website</string>

    <!-- Error messages -->
    <string name="error_email_format">Enter a valid email.</string>
    <string name="error_email_not_unique">Email already exists.</string>
    <string name="error_no_user">No such user found.</string>
    <string name="error_no_internet">Check your internet connection.</string>
    <string name="error_password_mismatch">Passwords do not match.</string>
    <string name="error_required">This field is required.</string>
    <string name="error_username_not_unique">Username already exists.</string>
    <string name="error_username_format">Only alphabets and numbers allowed.</string>
    <string name="error_unknown">An unknown error occurred.</string>
    <string name="error_wrong_credentials">Invalid email/password combination.</string>
    <string name="error_wrong_password">Invalid user credentials.</string>

    <!-- Labels -->
    <string name="label_edit_photo">Edit Photo</string>
    <string name="label_followers">Followers</string>
    <string name="label_following">Following</string>
    <string name="label_forgot_password">Forgot password?</string>
    <string name="label_password_change">Change Password</string>
    <string name="label_posts">Posts</string>
    <string name="label_send_link">Send Link</string>
    <string name="label_sign_in">Sign In</string>
    <string name="label_sign_up">Sign Up</string>
    <string name="label_visibility">Who should see this post?</string>

    <!-- Placeholders -->
    <string name="ph_about">Tagline</string>
    <string name="ph_birthday">28 June, 1996</string>
    <string name="ph_email">email@example.com</string>
    <string name="ph_join_date">Joined %s</string>
    <string name="ph_location">Multan, Pakistan</string>
    <string name="ph_message">This is a message.</string>
    <string name="ph_name">John Doe</string>
    <string name="ph_timestamp">2019–05–14 2:53 AM</string>
    <string name="ph_username">\@%s</string>
    <string name="ph_website">https://www.example.com</string>

    <!-- Status messages -->
    <string name="status_link_send">Your link will shortly arrive. Look under Spam if you can\'t find it.</string>
    <string name="status_password_updated">Password updated.</string>
    <string name="status_posting">Posting…</string>
    <string name="status_post_success">Post successfully published.</string>
    <string name="status_post_failed">Failed to post.</string>
    <string name="permission_storage">We need permission to access your file storage in order to download app data. The
    files you access frequently are cached on your device in order to provide
    you a smoother experience.
  </string>

    <string name="disclaimer">All the information you provide us is Public. If you do not wish others to see some
    information, such as your location, leave it empty. However, your email address and username can not be empty.
  </string>
    <string name="disclaimer_signup">
    <![CDATA[By signing up, you confirm that you have read our <a href=\'http://aspirasoft.co/apps/connect/privacy.html\'>Privacy Policy</a> and agree to our <a href=\'http://aspirasoft.co/apps/connect/terms.html\'>Terms and Conditions</a>.]]></string>

    <string-array name="batchList">
        <item>2013</item>
        <item>2014</item>
        <item>2015</item>
        <item>2016</item>
    </string-array>
    <string-array name="degreeList">
        <item>SEECS_BEE</item>
        <item>SEECS_BESE</item>
        <item>SEECS_BSCS</item>
        <item>SEECS_MSCS</item>
        <item>SEECS_MSEE</item>
        <item>SEECS_MSIS</item>
        <item>SEECS_MSIT</item>
        <item>SEECS_MSITE</item>
        <item>NBS_BBA</item>
        <item>NBS_MBA</item>
    </string-array>
    <string-array name="schoolList">
        <item>ASAB</item>
        <item>IESE</item>
        <item>IGIS</item>
        <item>NBS</item>
        <item>NICE</item>
        <item>NIPCONS</item>
        <item>S3H</item>
        <item>SADA</item>
        <item>SCME</item>
        <item>SMME</item>
        <item>SEECS</item>
        <item>SNS</item>
    </string-array>

    <!-- Activity titles -->
    <string name="title_activity_library">Library</string>
    <string name="title_activity_edit_book">Edit Book</string>
    <string name="title_activity_add_book">Add Book</string>

    <!-- Fragment titles -->
    <string name="title_fragment_home">Home</string>
    <string name="title_fragment_library">My Library</string>
    <string name="title_fragment_shelves">Bookshelves</string>
    <string name="title_fragment_settings">Settings</string>

    <!-- Formatting strings -->
    <string name="book_isbn">ISBN: %s</string>
    <string name="book_category"><![CDATA[%s > %s]]></string>
    <string name="book_category_none">Uncategorized</string>
    <string name="book_publish_year">. Published in %s.</string>
    <string name="book_publisher">%s%s</string>

    <!-- Default values -->
    <string name="book_publisher_none">Unknown Publisher</string>
    <string name="book_description_none">No description available.</string>
    <string name="value_none">N/A</string>

    <!-- UI labels (buttons, section headings, etc.) -->
    <string name="label_book_language">Language</string>
    <string name="label_book_format">Format</string>
    <string name="label_book_pages">Pages</string>
    <string name="label_book_description">Description</string>
    <string name="book_cover_error">Failed to upload book cover.</string>
    <string name="book_cover_select">Select Book Cover</string>

    <!-- Input hints -->
    <!--  <string name="hint_search">Search by ISBN, title, author, …</string>-->
    <string name="hint_book_title">Title</string>
    <string name="hint_book_authors">Author(s)</string>
    <string name="hint_book_category">Category</string>
    <string name="hint_book_subcategory">Sub Category</string>
    <string name="hint_book_pages">Page Count</string>
    <string name="hint_book_format">Format</string>
    <string name="hint_book_lang">Language</string>
    <string name="hint_book_publisher">Publisher</string>
    <string name="hint_book_publish_year">YYYY</string>
    <string name="hint_book_isbn">ISBN</string>
    <string name="hint_book_description">Description</string>

</resources>