<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_home"
        android:title="@string/title_fragment_home"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/nav_library"
        android:icon="@drawable/ic_shelves"
        android:title="@string/title_fragment_library"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/nav_shelves"
        android:icon="@drawable/ic_favorites"
        android:title="@string/title_fragment_shelves"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/nav_settings"
        android:icon="@drawable/ic_profile"
        android:title="@string/title_fragment_settings"
        app:showAsAction="ifRoom" />

</menu>