<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:gravity="center">

  <LinearLayout
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:gravity="start"
      android:orientation="vertical">

    <LinearLayout
        android:id="@+id/bio_field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

      <androidx.appcompat.widget.AppCompatImageView
          android:layout_width="16dp"
          android:layout_height="16dp"
          android:layout_marginEnd="8dp"
          android:layout_marginRight="8dp"
          android:scaleType="centerInside"
          app:srcCompat="@drawable/ic_bio"/>

      <androidx.appcompat.widget.AppCompatTextView
          android:id="@+id/bio"
          style="@style/TextAppearance.Material3.LabelMedium"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:drawablePadding="4dp"
          android:maxLines="1"
          android:text="@string/ph_about"
          android:textColor="@android:color/white"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

      <androidx.appcompat.widget.AppCompatImageView
          android:layout_width="16dp"
          android:layout_height="16dp"
          android:layout_marginEnd="8dp"
          android:layout_marginRight="8dp"
          android:scaleType="centerInside"
          app:srcCompat="@drawable/ic_location"/>

      <androidx.appcompat.widget.AppCompatTextView
          android:id="@+id/location"
          style="@style/TextAppearance.Material3.LabelMedium"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:gravity="center"
          android:maxLines="1"
          android:text="@string/ph_location"
          android:textColor="@android:color/white"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/birthday_field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

      <androidx.appcompat.widget.AppCompatImageView
          android:layout_width="16dp"
          android:layout_height="16dp"
          android:layout_marginEnd="8dp"
          android:layout_marginRight="8dp"
          android:scaleType="centerInside"
          app:srcCompat="@drawable/ic_birthday"/>

      <androidx.appcompat.widget.AppCompatTextView
          android:id="@+id/birthday"
          style="@style/TextAppearance.Material3.LabelMedium"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:drawablePadding="4dp"
          android:maxLines="1"
          android:text="@string/ph_birthday"
          android:textColor="@android:color/white"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

      <androidx.appcompat.widget.AppCompatImageView
          android:layout_width="16dp"
          android:layout_height="16dp"
          android:layout_marginEnd="8dp"
          android:layout_marginRight="8dp"
          android:scaleType="centerInside"
          app:srcCompat="@drawable/ic_email"/>


      <androidx.appcompat.widget.AppCompatTextView
          android:id="@+id/email"
          style="@style/TextAppearance.Material3.LabelMedium"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:drawablePadding="4dp"
          android:maxLines="1"
          android:text="@string/ph_email"
          android:textColor="@android:color/white"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/website_field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

      <androidx.appcompat.widget.AppCompatImageView
          android:layout_width="16dp"
          android:layout_height="16dp"
          android:layout_marginEnd="8dp"
          android:layout_marginRight="8dp"
          android:scaleType="centerInside"
          app:srcCompat="@drawable/ic_website"/>

      <androidx.appcompat.widget.AppCompatTextView
          android:id="@+id/website"
          style="@style/TextAppearance.Material3.LabelMedium"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:drawablePadding="4dp"
          android:maxLines="1"
          android:text="@string/ph_website"
          android:textColor="@android:color/white"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

      <androidx.appcompat.widget.AppCompatImageView
          android:layout_width="16dp"
          android:layout_height="16dp"
          android:layout_marginEnd="8dp"
          android:layout_marginRight="8dp"
          android:scaleType="centerInside"
          app:srcCompat="@drawable/ic_calendar"/>

      <androidx.appcompat.widget.AppCompatTextView
          android:id="@+id/joining_date"
          style="@style/TextAppearance.Material3.LabelMedium"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:drawablePadding="4dp"
          android:maxLines="1"
          android:text="@string/ph_join_date"
          android:textColor="@android:color/white"/>

    </LinearLayout>

  </LinearLayout>

</LinearLayout>