<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorDisabled"
            android:orientation="vertical"
            tools:context="dev.aspirasoft.vread.auth.ui.activity.UpdatePasswordActivity">

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:gravity="center"
      android:orientation="vertical"
      android:paddingStart="@dimen/activity_horizontal_margin"
      android:paddingTop="@dimen/activity_vertical_margin"
      android:paddingEnd="@dimen/activity_horizontal_margin"
      android:paddingBottom="@dimen/activity_vertical_margin">

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="128dp"
        android:layout_height="128dp"
        android:layout_margin="16dp"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:scaleType="fitCenter"
        android:src="@drawable/logo"
        android:tint="?attr/colorPrimaryDark"/>

    <LinearLayout
        android:id="@+id/credentials"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:gravity="center"
        android:orientation="vertical">

      <com.google.android.material.textfield.TextInputLayout
          android:id="@+id/oldPasswordWrapper"
          style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:hint="@string/hint_password_old"
          android:textColorHint="@color/colorNeutral"
          app:passwordToggleEnabled="true"
          app:passwordToggleTint="@color/colorNeutral">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/oldPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textVisiblePassword"
            android:textColor="@color/colorDefaultInverse"/>

      </com.google.android.material.textfield.TextInputLayout>

      <com.google.android.material.textfield.TextInputLayout
          android:id="@+id/passwordWrapper"
          style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:hint="@string/hint_password"
          android:textColorHint="@color/colorNeutral">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textVisiblePassword"
            android:textColor="@color/colorDefaultInverse"/>

      </com.google.android.material.textfield.TextInputLayout>

      <com.google.android.material.textfield.TextInputLayout
          android:id="@+id/confirmPasswordWrapper"
          style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:hint="@string/hint_password_confirm"
          android:textColorHint="@color/colorNeutral">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/confirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textVisiblePassword"
            android:textColor="@color/colorDefaultInverse"/>

      </com.google.android.material.textfield.TextInputLayout>

      <com.google.android.material.button.MaterialButton
          android:id="@+id/updatePasswordButton"
          style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="@dimen/activity_vertical_margin"
          android:onClick="updatePassword"
          android:text="@string/label_password_change"
          app:backgroundTint="?attr/colorPrimaryDark"/>

    </LinearLayout>

  </LinearLayout>

</ScrollView>